Small changes to files

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ $(document).ready(function () {
 <div id="TOC">
 <ul>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
+<li><a href="#first-week-of-iods">First week of IODs</a></li>
 </ul>
 </div>
 
@@ -151,17 +151,12 @@ $(document).ready(function () {
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
 <p>This course is an open datascience course using Git and R. My github repository is at <a href="https://github.com/KatariinaParnanen/IODS-project" class="uri">https://github.com/KatariinaParnanen/IODS-project</a></p>
-<p><em>Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the ‘Useful links’ page in the mooc area (chapter 1) for instructions.</em></p>
 <hr />
 </div>
-<div id="insert-chapter-2-title-here" class="section level1">
-<h1>Insert chapter 2 title here</h1>
-<p><em>Describe the work you have done this week and summarize your learning.</em></p>
-<ul>
-<li>Describe your work and results clearly.</li>
-<li>Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods</li>
-<li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using</li>
-</ul>
+<div id="first-week-of-iods" class="section level1">
+<h1>First week of IODs</h1>
+<p>In this first I learned how to use R and RStudio as well as Git. These are all very useful tools for working with open data and analysis of it. In R we used some of the very basic commands availaible and learned about variable types and functions and how they are operated in R. This weak we learned how to compute means and calculate with R. This weeks sets the stage for future tasks in R involving statistics.</p>
+<p>I am familiar with RStudio and Rmarkdown, so I din’t learn too many new things. The {r child = “chapter1.Rmd”} -notation was something that I hadn’t what would be useful in the future.</p>
 <hr />
 </div>
 
